--- a/Blogs/templates/base.html
+++ b/Blogs/templates/base.html
@@ -11,6 +11,9 @@
         <h1>
             <a href="/">Django Blog</a>
         </h1>
+        <h2>
+            <a href="{% url 'post_new' %}">+ New Blog Post</a>
+        </h2>
     </header>
     <div class="container">
         {% block content %}
