--- a/Blogs/templates/base.html
+++ b/Blogs/templates/base.html
@@ -11,9 +11,7 @@
         <h1>
             <a href="/">Django Blog</a>
         </h1>
-        <h2>
-            <a href="{% url 'post_new' %}">+ New Blog Post</a>
-        </h2>
+        <p><a href="{% url 'post_new' %}">New Blog Post</a></p>
     </header>
     <div class="container">
         {% block content %}
