--- a/Blogs/templates/post_delete.html
+++ b/Blogs/templates/post_delete.html
@@ -7,11 +7,11 @@
 <body>
     {% extends 'base.html' %}
         {% block content %}
-            <h1>Edit Post</h1>
+            <h1>Delete Post</h1>
             <form action="" method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Update">
+            {% csrf_token %}
+            <p>Вы действительно хотите удалить пост: "{{ post.title }}"? </p>
+            <input type="submit" value="Confirm">
             </form>
         {% endblock content %}
 </body>
