--- a/Blogs/templates/home.html
+++ b/Blogs/templates/home.html
@@ -7,6 +7,7 @@
 <body>
     {% extends 'base.html' %}
         {% block content %}
+            <p><a href="{% url 'post_new' %}">New Blog Post</a></p>
             {% for post in object_list %}
                 <div class="post-entry">
                     <h2> <a href="{% url 'post_detail' post.pk %}"> {{ post.title }} </a> </h2>
