--- a/Blogs/templates/base.html
+++ b/Blogs/templates/base.html
@@ -12,6 +12,17 @@
             <a href="/">Django Blog</a>
         </h1>
     </header>
+
+    {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}</p>
+        <p>
+            <a href="{% url 'logout' %}">logout</a>
+        </p>
+    {% else %}
+        <p>You are not loggin in.</p>
+        <a href="{% url 'login' %}">login</a>
+    {% endif %}
+
     <div class="container">
         {% block content %}
         {% endblock content %}
